# econoclasses

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  structure.txt
econoclasses/: __init__.py
econoclasses/consumer/: __init__.py  agent.py  market.py
econoclasses/core/: __init__.py
econoclasses/education/: __init__.py
econoclasses/equilibrium/: __init__.py  exchange.py  general.py  partial.py
econoclasses/examples/: exchange_economy.py  five_friends.py  game_theory.py  market_welfare.py  plotting_showcase.py  robinson_crusoe.py  welfare_analysis.py
econoclasses/externalities/: __init__.py
econoclasses/game_theory/: __init__.py  advanced.py  auctions.py  classics.py  games.py  solvers.py
econoclasses/market_structures/: __init__.py
econoclasses/plotting/: __init__.py  equilibrium.py  general.py  preferences.py  production.py  welfare.py
econoclasses/preferences/: __init__.py  forms.py  solvers.py  utility.py
econoclasses/production/: __init__.py  firm.py  forms.py  solvers.py  technology.py
econoclasses/public_goods/: __init__.py
econoclasses/welfare/: __init__.py
examples/: example_preferences.py
microeconomics/: equations.py  preferences.py
plotting/: plotter.py
